--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,18 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "aniview"]
+	path = aniview
+	url = https://github.com/lgnbhl/aniview
+	shallow = true
+	registered = true
+[submodule "aos"]
+	path = aos
+	url = https://github.com/lgnbhl/aos
+	shallow = true
+	registered = true
+[submodule "gotop"]
+	path = gotop
+	url = https://github.com/lgnbhl/gotop
+	shallow = true
+	registered = true
