--- a/.gitmodules
+++ b/.gitmodules
@@ -13,6 +13,11 @@
 	url = https://github.com/lgnbhl/aos
 	shallow = true
 	registered = true
+[submodule "BFS"]
+	path = BFS
+	url = https://github.com/lgnbhl/bfs
+	shallow = true
+	registered = true
 [submodule "gotop"]
 	path = gotop
 	url = https://github.com/lgnbhl/gotop
